--- a/about.html
+++ b/about.html
@@ -45,14 +45,15 @@
     <main class="page">
       <section class="about-page">
         <article>
-          <h2>I'm baby coloring book poke taxidermy</h2>
+          <h2>Culinary Land: Flavorful Adventures Await!!!</h2>
           <p>
-            Taxidermy forage glossier letterpress heirloom before they sold out
-            you probably haven't heard of them banh mi biodiesel chia.
+            Welcome to Culinary Land - your passport to a world of 
+            delicious possibilities!  Dive into our handpicked 
+            recipes, expertly crafted for all skill levels. 
           </p>
           <p>
-            Taiyaki tumblr flexitarian jean shorts brunch, aesthetic salvia
-            retro.
+            Join our community, share the love for great food, and let's 
+            make every meal a flavorful adventure together!  
           </p>
           <a href="contact.html" class="btn"> contact </a>
         </article>
@@ -64,10 +65,10 @@
         />
       </section>
       <section class="featured-recipes">
-        <h5 class="featured-title">Look At This Awesomesouce!</h5>
+        <h5 class="featured-title">Look At This Fantastic Find!</h5>
         <div class="recipes-list">
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="mushroom-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-1.jpg"
               class="img recipe-img"
@@ -78,7 +79,7 @@
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="Chicken-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-2.jpg"
               class="img recipe-img"
@@ -89,13 +90,40 @@
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="vege-soup-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-3.jpeg"
               class="img recipe-img"
               alt=""
             />
             <h5>Vegetable Soup</h5>
+            <p>Prep : 10min | Cook : 15min</p>
+          </a>
+          <a href="banana-pancake-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-4.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Banana Pancakes</h5>
+            <p>Prep : 10min | Cook : 15min</p>
+          </a>
+          <a href="pudding-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-5.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Buiscuit Pudding</h5>
+            <p>Prep : 30min | Ferm : 3days</p>
+          </a>
+          <a href="pickle-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-6.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Mango Pickle</h5>
             <p>Prep : 10min | Cook : 15min</p>
           </a>
           <!-- end of single recipe -->
@@ -106,7 +134,7 @@
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
-        <span class="footer-logo">Simple Recipes</span> Built by
+        <span class="footer-logo">Culinary Land</span> Built by
         HSA
       </p>
     </footer>
