--- a/banana-pancake-recipe.html
+++ b/banana-pancake-recipe.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Single Recipe</title>
+    <title>Mushroom Recipe</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <!-- normalize -->
@@ -46,13 +46,16 @@
       <div class="recipe-page">
         <section class="recipe-hero">
           <img
-            src="./assets/recipes/recipe-1.jpg"
+            src="./assets/recipes/recipe-4.jpg"
             class="img recipe-hero-img"
           />
           <article class="recipe-info">
-            <h2>Mushroom Curry</h2>
+            <h2>Banana Pancakes</h2>
             <p>
-              Mushroom Curry is a tantalizing vegetarian dish celebrated for its rich flavors and simplicity. In this Sinhala-inspired recipe, tender mushrooms are cooked in a fragrant blend of spices, infused with coconut milk for a creamy finish. This comforting curry is a delightful addition to your table, offering a burst of flavors that pairs perfectly with rice or bread.
+              Banana Pancakes are a delicious and fluffy breakfast treat that 
+              combines the sweetness of ripe bananas with the comfort of pancakes. 
+              These easy-to-make pancakes are perfect for a leisurely breakfast 
+              or brunch, and they're sure to be a hit with both kids and adults.
             </p>
             <div class="recipe-icons">
               <article>
@@ -63,19 +66,19 @@
               <article>
                 <i class="far fa-clock"></i>
                 <h5>cook time</h5>
-                <p>15 min.</p>
+                <p>10 min.</p>
               </article>
               <article>
                 <i class="fas fa-user-friends"></i>
                 <h5>serving</h5>
-                <p>6 servings</p>
+                <p>8 servings</p>
               </article>
             </div>
             <p class="recipe-tags">
-              Tags : <a href="tag-template.html">chicken</a>
-              <a href="tag-template.html">breakfast</a>
-              <a href="tag-template.html">pancakes</a>
-              <a href="tag-template.html">food</a>
+              Tags : <a href="tag-template-1.html">meat</a>
+              <a href="tag-template-2.html">pancakes</a>
+              <a href="tag-template-3.html">soup</a>
+              <a href="tag-template-4.html">food</a>
             </p>
           </article>
         </section>
@@ -90,7 +93,8 @@
                 <div></div>
               </header>
               <p>
-                Heat oil in a pan. Add mustard seeds, fenugreek seeds, and cinnamon. Let them crackle briefly.
+                In a large mixing bowl, mash ripe bananas using a fork or 
+                potato masher until smooth.
               </p>
             </div>
             <!-- end of single instruction -->
@@ -101,8 +105,8 @@
                 <div></div>
               </header>
               <p>
-                Add chopped onions and green chilies. Cook until onions become see-through.
-Add turmeric and chili powder. Mix well.
+                Add eggs, milk, and vanilla extract to the mashed bananas. 
+                Mix well until all ingredients are combined.
               </p>
             </div>
             <!-- end of single instruction -->
@@ -113,17 +117,21 @@ Add turmeric and chili powder. Mix well.
                 <div></div>
               </header>
               <p>
-                Put in sliced mushrooms. Stir and cook for 2-3 minutes.
+                In a separate bowl, whisk together flour, baking powder, 
+                and salt. Gradually add the dry ingredients to the banana 
+                mixture, stirring until just combined.
               </p>
             </div>
             <div class="single-instruction">
               <header>
-                <p>step 3</p>
+                <p>step 4</p>
                 <div></div>
               </header>
               <p>
-                Pour in coconut milk. Add salt to taste.
-Simmer on low-medium heat for 10-15 minutes until mushrooms are soft and the curry thickens a bit.
+                Heat a griddle or non-stick skillet over medium heat. 
+                Spoon the batter onto the griddle to form pancakes. 
+                Cook until bubbles form on the surface, then flip and 
+                cook until the other side is golden brown.
               </p>
             </div>
             <!-- end of single instruction -->
@@ -131,20 +139,19 @@ Simmer on low-medium heat for 10-15 minutes until mushrooms are soft and the cur
           <article class="second-column">
             <div>
               <h4>ingredients</h4>
-              <p class="single-ingredient">250g mushrooms, sliced</p>
-              <p class="single-ingredient">1 onion, finely chopped</p>
-              <p class="single-ingredient">2-3 green chilies, sliced</p>
-              <p class="single-ingredient">1-inch piece of cinnamon</p>
-              <p class="single-ingredient">1 teaspoon- mustard seeds,fenugreek seeds,turmeric powder,chili powder (adjust to taste)</p>
-              <p class="single-ingredient">1 cup coconut milk</p>
-              <p class="single-ingredient">2 tablespoons oil (coconut oil preferred)</p>
-              <p class="single-ingredient">Salt to taste</p>
+              <p class="single-ingredient">2 ripe bananas</p>
+              <p class="single-ingredient">2 eggs</p>
+              <p class="single-ingredient">1/2 cup milk</p>
+              <p class="single-ingredient">1 teaspoon vanilla extract</p>
+              <p class="single-ingredient">1 cup all-purpose flour</p>
+              <p class="single-ingredient">1 teaspoon baking powder</p>
+              <p class="single-ingredient">1/4 teaspoon salt</p>
             </div>
             <div>
               <h4>tools</h4>
-              <p class="single-tool">Pan With Lid and spoon</p>
-              <p class="single-tool">Measuring Spoons</p>
-              <p class="single-tool">Cutting Board and Knife</p>
+              <p class="single-tool">Mixing bowl</p>
+              <p class="single-tool">Fork or potato masher</p>
+              <p class="single-tool">Griddle or skillet</p>
             </div>
           </article>
         </section>
@@ -154,7 +161,7 @@ Simmer on low-medium heat for 10-15 minutes until mushrooms are soft and the cur
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
-        <span class="footer-logo">Simple Recipes</span> Built by
+        <span class="footer-logo">Culinary Land</span> Built by
         HSA
       </p>
     </footer>
