--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,6 @@
           <a href="about.html" class="nav-link"> about </a>
           <a href="tags.html" class="nav-link"> tags </a>
           <a href="recipes.html" class="nav-link"> recipes </a>
-
-          <div class="nav-link contact-link">
-            <a href="contact.html" class="btn"> contact </a>
-          </div>
         </div>
       </div>
     </nav>
@@ -78,7 +74,7 @@
         <h5 class="featured-title">Look At This Fantastic Find!</h5>
         <div class="recipes-list">
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="mushroom-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-1.jpg"
               class="img recipe-img"
@@ -89,7 +85,7 @@
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="Chicken-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-2.jpg"
               class="img recipe-img"
@@ -100,13 +96,40 @@
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="vege-soup-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-3.jpeg"
               class="img recipe-img"
               alt=""
             />
             <h5>Vegetable Soup</h5>
+            <p>Prep : 10min | Cook : 15min</p>
+          </a>
+          <a href="banana-pancake-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-4.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Banana Pancakes</h5>
+            <p>Prep : 10min | Cook : 15min</p>
+          </a>
+          <a href="pudding-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-5.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Buiscuit Pudding</h5>
+            <p>Prep : 30min | Ferm : 3days</p>
+          </a>
+          <a href="pickle-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-6.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Mango Pickle</h5>
             <p>Prep : 10min | Cook : 15min</p>
           </a>
           <!-- end of single recipe -->
@@ -117,7 +140,7 @@
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
-        <span class="footer-logo">Simple Recipes</span> Built by
+        <span class="footer-logo">Culinary Land</span> Built by
         HSA
       </p>
     </footer>
