--- a/recipes.html
+++ b/recipes.html
@@ -49,28 +49,29 @@
         <div class="tags-container">
           <h4>recipes</h4>
           <div class="tags-list">
-            <a href="tag-template.html">Chicken (1)</a>
-            <a href="tag-template.html">Breakfast (2)</a>
-            <a href="tag-template.html">Soups (3)</a>
-            <a href="tag-template.html">Food (4)</a>
+            <a href="tag-template-1.html">Meat (1)</a>
+            <a href="tag-template-2.html">Pancakes (1)</a>
+            <a href="tag-template-3.html">Soups (1)</a>
+            <a href="tag-template-4.html">Food (4)</a>
           </div>
         </div>
         <!-- end of tag container -->
         <!-- recipes list -->
         <div class="recipes-list">
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="mushroom-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-1.jpg"
               class="img recipe-img"
               alt=""
             />
             <h5>Mushroom Curry</h5>
-            <p>Prep : 10min | Cook : 15min</p>
+            <p>Prep : 5min | Cook : 15min</p>
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="Chicken-recipe.html
+          " class="recipe">
             <img
               src="./assets/recipes/recipe-2.jpg"
               class="img recipe-img"
@@ -81,7 +82,7 @@
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="vege-soup-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-3.jpeg"
               class="img recipe-img"
@@ -92,13 +93,31 @@
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="banana-pancake-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-4.jpg"
               class="img recipe-img"
               alt=""
             />
             <h5>Banana Pancakes</h5>
+            <p>Prep : 10min | Cook : 15min</p>
+          </a>
+          <a href="pudding-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-5.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Buiscuit Pudding</h5>
+            <p>Prep : 30min | Ferm : 3days</p>
+          </a>
+          <a href="pickle-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-6.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Mango Pickle</h5>
             <p>Prep : 10min | Cook : 15min</p>
           </a>
           <!-- end of single recipe -->
@@ -110,7 +129,7 @@
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
-        <span class="footer-logo">Simple Recipes</span> Built by
+        <span class="footer-logo">Culinary Land</span> Built by
        HSA
       </p>
     </footer>
