--- a/tag-template-3.html
+++ b/tag-template-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe Template</title>
+    <title>Soup Template</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <!-- normalize -->
@@ -44,50 +44,17 @@
     <!-- end of nav -->
     <main class="page">
       <div class="featured-recipes">
-        <h4>Beef</h4>
+        <h4>Soup</h4>
           <!-- recipes list -->
         <div class="recipes-list">
           <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
-            <img
-              src="./assets/recipes/recipe-1.jpg"
-              class="img recipe-img"
-              alt=""
-            />
-            <h5>Mushroom Curry</h5>
-            <p>Prep : 10min | Cook : 15min</p>
-          </a>
-          <!-- end of single recipe -->
-          <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
-            <img
-              src="./assets/recipes/recipe-2.jpg"
-              class="img recipe-img"
-              alt=""
-            />
-            <h5>Chicken</h5>
-            <p>Prep : 10min | Cook : 15min</p>
-          </a>
-          <!-- end of single recipe -->
-          <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
+          <a href="vege-soup-recipe.html" class="recipe">
             <img
               src="./assets/recipes/recipe-3.jpeg"
               class="img recipe-img"
               alt=""
             />
             <h5>Vegetable Soup</h5>
-            <p>Prep : 10min | Cook : 15min</p>
-          </a>
-          <!-- end of single recipe -->
-          <!-- single recipe -->
-          <a href="single-recipe.html" class="recipe">
-            <img
-              src="./assets/recipes/recipe-4.jpg"
-              class="img recipe-img"
-              alt=""
-            />
-            <h5>Banana Pancakes</h5>
             <p>Prep : 10min | Cook : 15min</p>
           </a>
           <!-- end of single recipe -->
@@ -100,7 +67,7 @@
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
-        <span class="footer-logo">Simple Recipes</span> Built by
+        <span class="footer-logo">Culinary Land</span> Built by
       HSA
       </p>
     </footer>
