--- a/tag-template-1.html
+++ b/tag-template-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Error</title>
+    <title>Meat Template</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <!-- normalize -->
@@ -23,7 +23,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <a href="index.html" class="nav-logo">
-            <img src="./assets/logo.jpg" alt="Simple Recipes" />
+            <img src="./assets/logo.jpg" alt="Simple Eecipes" />
           </a>
           <button class="nav-btn btn">
             <i class="fas fa-align-justify"></i>
@@ -42,18 +42,34 @@
       </div>
     </nav>
     <!-- end of nav -->
-    <main class="page error-page">
-        <section>
-          <h1>404</h1>
-          <h3>page not found</h3>
-        </section>
+    <main class="page">
+      <div class="featured-recipes">
+        <h4>Meat</h4>
+          <!-- recipes list -->
+        <div class="recipes-list">
+          <!-- single recipe -->
+          <!-- end of single recipe -->
+          <a href="Chicken-recipe.html" class="recipe">
+            <img
+              src="./assets/recipes/recipe-2.jpg"
+              class="img recipe-img"
+              alt=""
+            />
+            <h5>Chicken</h5>
+            <p>Prep : 10min | Cook : 15min</p>
+          </a>
+          <!-- end of single recipe -->
+        </div>
+        <!-- end of recipe list -->
+      </div>
+          
     </main>
     <!-- footer -->
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
         <span class="footer-logo">Culinary Land</span> Built by
-    HSA
+      HSA
       </p>
     </footer>
     <script src="./js/app.js"></script>
