--- a/tag-template-4.html
+++ b/tag-template-4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Culinary Land</title>
+    <title>Food Template</title>
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon" />
     <!-- normalize -->
@@ -23,7 +23,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <a href="index.html" class="nav-logo">
-            <img src="./assets/logo.jpg" alt="simple recipes" />
+            <img src="./assets/logo.jpg" alt="Simple Eecipes" />
           </a>
           <button class="nav-btn btn">
             <i class="fas fa-align-justify"></i>
@@ -42,35 +42,10 @@
       </div>
     </nav>
     <!-- end of nav -->
-    <!-- main -->
     <main class="page">
-      <!-- header -->
-      <header class="hero">
-        <div class="hero-container">
-          <div class="hero-text">
-            <h1>Culinary Land</h1>
-            <h4>Effortless creations, bursting with taste!</h4>
-            <p>Welcome to our kitchen, where passion simmers, 
-              creativity bubbles, and each recipe is a work of 
-              edible art. Let the aroma of our culinary creations 
-              be the prelude to an unforgettable feast.....</p>
-          </div>
-        </div>
-      </header>
-      <!-- end of header -->
-      <section class="recipes-container">
-        <!-- tag container -->
-        <div class="tags-container">
-          <h4>recipes</h4>
-          <div class="tags-list">
-            <a href="tag-template-1.html">Meat (1)</a>
-            <a href="tag-template-2.html">Pancake (1)</a>
-            <a href="tag-template-3.html">Soups (1)</a>
-            <a href="tag-template-4.html">Food (6)</a>
-          </div>
-        </div>
-        <!-- end of tag container -->
-        <!-- recipes list -->
+      <div class="featured-recipes">
+        <h4>Food</h4>
+          <!-- recipes list -->
         <div class="recipes-list">
           <!-- single recipe -->
           <a href="mushroom-recipe.html" class="recipe">
@@ -80,7 +55,7 @@
               alt=""
             />
             <h5>Mushroom Curry</h5>
-            <p>Prep : 5min | Cook : 15min</p>
+            <p>Prep : 10min | Cook : 15min</p>
           </a>
           <!-- end of single recipe -->
           <!-- single recipe -->
@@ -135,16 +110,16 @@
           </a>
           <!-- end of single recipe -->
         </div>
-        <!-- end of recipes list -->
-      </section>
+        <!-- end of recipe list -->
+      </div>
+          
     </main>
-    <!-- end of main -->
     <!-- footer -->
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
         <span class="footer-logo">Culinary Land</span> Built by
-       HSA
+      HSA
       </p>
     </footer>
     <script src="./js/app.js"></script>
