--- a/tags.html
+++ b/tags.html
@@ -45,33 +45,33 @@
     <main class="page">
          <section class="tags-wrapper">
           <!-- single tag -->
-              <a href="tag-template.html" class="tag">
-                <h5>Chicken</h5>
+              <a href="tag-template-1.html" class="tag">
+                <h5>Meat</h5>
                 <p>1 recipe</p>
               </a>
             <!-- end of single tag -->
           <!-- single tag -->
-              <a href="tag-template.html" class="tag">
-                <h5>Breakfast</h5>
-                <p>2 recipe</p>
+              <a href="tag-template-2.html" class="tag">
+                <h5>Pancake</h5>
+                <p>1 recipe</p>
               </a>
             <!-- end of single tag -->
           <!-- single tag -->
-              <a href="tag-template.html" class="tag">
+              <a href="tag-template-3.html" class="tag">
                 <h5>Soups</h5>
-                <p>3 recipe</p>
-              </a>
-            <!-- end of single tag -->
-          <!-- single tag -->
-              <a href="tag-template.html" class="tag">
-                <h5>Dinner</h5>
-                <p>4 recipe</p>
-              </a>
-            <!-- end of single tag -->
-          <!-- single tag -->
-              <a href="tag-template.html" class="tag">
-                <h5>foods</h5>
                 <p>1 recipe</p>
+              </a>
+            <!-- end of single tag -->
+          <!-- single tag -->
+              <a href="tag-template-4.html" class="tag">
+                <h5>Dinner</h5>
+                <p>6 recipe</p>
+              </a>
+            <!-- end of single tag -->
+          <!-- single tag -->
+              <a href="tag-template-4.html" class="tag">
+                <h5>foods</h5>
+                <p>6 recipe</p>
               </a>
             <!-- end of single tag -->
         </section>
@@ -80,7 +80,7 @@
     <footer class="page-footer">
       <p>
         &copy; <span id="date"></span>
-        <span class="footer-logo">Simple Recipes</span> Built by
+        <span class="footer-logo">Culinary Land</span> Built by
         HSA
       </p>
     </footer>
